--- a/Mobile/UQACApp/app/src/main/res/layout/activity_main.xml
+++ b/Mobile/UQACApp/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,25 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.gestionprojet.uqacapp.MainActivity">
+    android:layout_height="match_parent" >
 
     <TextView
+        android:id="@+id/display_drawer_txt"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
-</RelativeLayout>
+        android:layout_height="wrap_content" />
+
+    <ListView
+        android:id="@+id/my_drawer"
+        android:layout_width="240dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="#EFEFEF"
+        android:choiceMode="singleChoice"
+        android:divider="#AAA"
+        android:dividerHeight="1dp" />
+
+
+
+</android.support.v4.widget.DrawerLayout>
+
