--- a/Mobile/UQACApp/app/src/main/res/layout/activity_login.xml
+++ b/Mobile/UQACApp/app/src/main/res/layout/activity_login.xml
@@ -11,6 +11,7 @@
     tools:context="com.gestionprojet.uqacapp.LoginActivity">
 
     <!-- Login progress -->
+
     <ProgressBar
         android:id="@+id/login_progress"
         style="?android:attr/progressBarStyleLarge"
@@ -28,7 +29,8 @@
             android:id="@+id/email_login_form"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:weightSum="1">
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
@@ -52,7 +54,7 @@
                 <EditText
                     android:id="@+id/password"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:hint="@string/prompt_password"
                     android:imeActionId="@+id/login"
                     android:imeActionLabel="@string/action_sign_in_short"
@@ -63,15 +65,34 @@
 
             </android.support.design.widget.TextInputLayout>
 
+            <CheckBox
+                android:text="se souvenir de moi"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/checkBox_souvenir"
+                android:checked="false"
+                android:textSize="18sp"
+                android:layout_weight="0.16" />
+
             <Button
                 android:id="@+id/email_sign_in_button"
                 style="?android:textAppearanceSmall"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="25dp"
                 android:text="@string/action_sign_in"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:layout_weight="0.40" />
+
+            <TextView
+                android:text="mot de passe oublié?"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView5"
+                android:layout_marginTop="25dp"
+                android:textColor="@android:color/holo_blue_dark" />
 
         </LinearLayout>
     </ScrollView>
+
 </LinearLayout>
