--- a/Mobile/UQACApp/app/src/main/res/layout/activity_login.xml
+++ b/Mobile/UQACApp/app/src/main/res/layout/activity_login.xml
@@ -43,7 +43,8 @@
                     android:hint="@string/prompt_email"
                     android:inputType="textEmailAddress"
                     android:maxLines="1"
-                    android:singleLine="true" />
+                    android:singleLine="true"
+                    android:autoText="false" />
 
             </android.support.design.widget.TextInputLayout>
 
@@ -90,7 +91,17 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/textView5"
                 android:layout_marginTop="25dp"
-                android:textColor="@android:color/holo_blue_dark" />
+                android:textColor="@android:color/holo_blue_dark"
+                android:autoLink="web" />
+
+            <TextView
+                android:text="usagé oublié?"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView6"
+                android:textColor="@android:color/holo_blue_dark"
+                android:layout_marginTop="25dp"
+                android:autoLink="web" />
 
         </LinearLayout>
     </ScrollView>
