--- a/Mobile/UQACApp/app/src/main/res/layout/activity_horaire.xml
+++ b/Mobile/UQACApp/app/src/main/res/layout/activity_horaire.xml
@@ -56,9 +56,8 @@
             android:layout_height="268dp">
 
             <TableRow
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@android:color/transparent">
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" >
 
                 <ImageButton
                     android:layout_width="wrap_content"
@@ -68,7 +67,8 @@
                     android:visibility="visible"
                     android:background="@android:color/background_light"
                     android:layout_marginLeft="15dp"
-                    android:layout_marginTop="15dp" />
+                    android:layout_marginTop="15dp"
+                    android:clickable="false" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -76,75 +76,26 @@
                     android:id="@+id/textView11"
                     android:textColor="@android:color/holo_green_dark"
                     android:textSize="24sp"
-                    android:text="Horaire, locaux \net enseignant"
+                    android:text="Horaire: \ndu JOUR dd/mm/aaaa \nau JOUR dd/mm/aaaa   \n\nde hh:mm à hh:mm \nLocal: X#-####"
                     android:layout_marginLeft="25dp"
                     android:layout_marginTop="15dp" />
             </TableRow>
 
             <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" >
-                <ImageButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/ic_trending_up_black_48dp"
-                    android:id="@+id/imageButton4"
-                    android:visibility="visible"
-                    android:background="@android:color/background_light"
-                    android:layout_marginLeft="15dp"
-                    android:layout_marginTop="15dp" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/textView12"
-                    android:textColor="@android:color/holo_green_dark"
-                    android:textSize="24sp"
-                    android:text="Résultats d'évaluation"
-                    android:layout_marginLeft="25dp"
-                    android:layout_marginTop="25dp" />
-
-            </TableRow>
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" >
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent">
 
                 <ImageButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/ic_description_black_48dp"
-                    android:id="@+id/imageButton5"
-                    android:visibility="visible"
-                    android:background="@android:color/background_light"
-                    android:layout_marginLeft="15dp"
-                    android:layout_marginTop="15dp" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/textView13"
-                    android:textColor="@android:color/holo_green_dark"
-                    android:textSize="24sp"
-                    android:text="Résultats d'évaluation"
-                    android:layout_marginLeft="25dp"
-                    android:layout_marginTop="25dp" />
-
-            </TableRow>
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" >
-
-                <ImageButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/ic_import_contacts_black_48dp"
+                    app:srcCompat="@drawable/ic_card_travel_black_48dp"
                     android:id="@+id/imageButton6"
                     android:visibility="visible"
                     android:background="@android:color/background_light"
                     android:layout_marginLeft="15dp"
-                    android:layout_marginTop="15dp" />
+                    android:layout_marginTop="15dp"
+                    android:clickable="false" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -152,16 +103,32 @@
                     android:id="@+id/textView14"
                     android:textColor="@android:color/holo_green_dark"
                     android:textSize="24sp"
-                    android:text="Plan de cours"
+                    android:text="Enseignant(s): \nM. Abcd efghijk"
                     android:layout_marginLeft="25dp"
                     android:layout_marginTop="25dp" />
+
             </TableRow>
 
         </TableLayout>
 
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="32dp"
+            android:layout_marginLeft="90dp">
+
+            <TextView
+                android:text="abcd_efghijk.1@uqac.ca"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView4"
+                android:textColor="@android:color/holo_blue_dark"
+                android:textSize="24sp"
+                android:layout_marginTop="5dp" />
+        </TableRow>
+
         <View
             android:layout_width="match_parent"
-            android:layout_marginTop="46dp"
+            android:layout_marginTop="15dp"
             android:layout_height="1dp"
             android:background="@android:color/darker_gray"/>
 
@@ -172,7 +139,7 @@
             <TableRow
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="16dp">
+                android:layout_marginLeft="15dp">
 
                 <ImageButton
                     android:layout_width="wrap_content"
@@ -207,3 +174,4 @@
 
 
 </android.support.v4.widget.DrawerLayout>
+
