ajustement des marges

--- a/HTML/UQAC/css/uqac.css
+++ b/HTML/UQAC/css/uqac.css
@@ -26,8 +26,9 @@ ol {
 #menu {
   border-width: 1px;
   border-style: solid;
+  border-right-width: 0px;
+  margin-left: 75%;
   border-color: black;
-  margin: 5 px;
 }
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
 html {
