--- a/HTML/UQAC/less/uqac.less
+++ b/HTML/UQAC/less/uqac.less
@@ -30,9 +30,12 @@ ol {
 #menu {
   border-width: 1px;
   border-style: solid;
+  border-right-width: 0px;
+  margin-left: 75%;
   border-color: black;
-  margin: 5 px;
 }
+
+#cours {}
 
 //
 // Variables
