Changements pour repondre aux modifications demandées

--- a/HTML/UQAC/less/uqac.less
+++ b/HTML/UQAC/less/uqac.less
@@ -23,8 +23,14 @@ ol {
 #actu {
   border-width: 1px;
   border-style: solid;
-  border-radius: 5px;
+ 
   border-color: black;
+}
+#actutitre {
+  border-width: 1px;
+  border-style: solid;
+  border-color: black;
+  border-top-width:0px;
 }
 
 #menu {
