--- a/HTML/UQAC/css/uqac.css
+++ b/HTML/UQAC/css/uqac.css
@@ -12,7 +12,7 @@
  *   box-shadow : 0px 0px 10px black !important;
  * }
 */
-ol {
+2BFI102 - Gestion financière ol {
   border-width: 2px;
   border-style: solid;
   border-color: #5bc0d;
@@ -20,8 +20,14 @@ ol {
 #actu {
   border-width: 1px;
   border-style: solid;
-  border-radius: 5px;
   border-color: black;
+  border-bottom-width: 0px;
+}
+#actutitre {
+  border-width: 1px;
+  border-style: solid;
+  border-color: black;
+  border-top-width: 0px;
 }
 #menu {
   border-width: 1px;
